Change HTML marker Size and color

--- a/angular.json
+++ b/angular.json
@@ -144,6 +144,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "leafletSetUp"
+    }
+  },
+  "defaultProject": "leafletSetUp",
+  "cli": {
+    "analytics": false
+  }
 }
