--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/router": "~9.1.0",
     "@types/leaflet": "^1.5.12",
     "leaflet": "^1.6.0",
+    "ng5-slider": "^1.2.4",
+    "ngx-color-picker": "^9.1.0",
     "reset-css": "^5.0.1",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
